Fixed Nav Issue on Mobile Sized Screen

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -63,7 +63,7 @@ html {
   border: 2px solid #3664fa;
   border-radius: 35px;
   font-size: 20px;
-  z-index: 5;
+  z-index: 2;
 }
 
 #CMTFOM:hover {
@@ -79,7 +79,7 @@ html {
   width: 250px;
   fill: #ffffff;
   float: left;
-  z-index: 1;
+  z-index: 2;
 }
 
 svg:hover #DLogo {
@@ -129,10 +129,10 @@ nav ul li a:hover {
     .nav-container {
         position: fixed;
         top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        z-index: 2;
+        right: 0;
+        height: 10%;
+        width: 10%;
+        z-index: 3;
         opacity: 0;
         transition: all 0.2s ease;
         background-color: #fffffff6;
@@ -148,7 +148,6 @@ nav ul li a:hover {
 
     #RDM {
       width: 95%;
-      position: absolute;
       left: 0;
       right: 0;
       margin-left: auto;
@@ -156,11 +155,11 @@ nav ul li a:hover {
     }
 
     .nav-container ul li {
-        display: block;
-        float: none;
-        width: 100%;
-        text-align: right;
-        margin-bottom: 10px;
+      display: block;
+      float: none;
+      width: 100%;
+      text-align: right;
+      margin-bottom: 10px;
     }
 
     .nav-container ul li:nth-child(1) a {
@@ -231,6 +230,11 @@ nav ul li a:hover {
 
 #nav:checked+.nav-open {
     transform: rotate(45deg);
+}
+
+#nav:checked+.nav-open+.nav-container {
+    width: 100%;
+    height: 100%;
 }
 
 #nav:checked+.nav-open i {
